mise en place du post et get de species me manque plus que person

--- a/src/main/resources/templates/animal/animalVue.html
+++ b/src/main/resources/templates/animal/animalVue.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <link rel="stylesheet" th:href="@{/css/animal.css}" />
+    <link rel="stylesheet" th:href="@{/css/main.css}" />
     <meta charset="UTF-8">
     <title>liste animals</title>
 </head>
