--- a/src/main/resources/templates/animal/animalVueCreate.html
+++ b/src/main/resources/templates/animal/animalVueCreate.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <link rel="stylesheet" th:href="@{/css/createAnimal.css}" />
+    <link rel="stylesheet" th:href="@{/css/create.css}" />
     <meta charset="UTF-8">
     <title>Créer un animal</title>
 </head>
