--- a/src/main/resources/templates/person/personVueCreate.html
+++ b/src/main/resources/templates/person/personVueCreate.html
@@ -15,10 +15,12 @@
         <div>
             <label for="prenom">Prenom: </label>
             <input type="text" th:field="*{lastname}" id="Nom" />
+            <span th:if="${#fields.hasErrors('lastname')}" th:errors="*{lastname}">Error</span>
         </div>
         <div>
             <label for="nom"> Nom:</label>
             <input type="text" th:field="*{firstname}" id="couleur" />
+            <span th:if="${#fields.hasErrors('firstname')}" th:errors="*{firstname}">Error</span>
         </div>
         <div>
             <label for="age"> age:</label>
