--- a/src/main/resources/templates/animal/animalVue.html
+++ b/src/main/resources/templates/animal/animalVue.html
@@ -9,6 +9,13 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <a href="http://localhost:8080/person">Person</a>
+            <a href="http://localhost:8080/species">Species</a>
+            <a href="http://localhost:8080/animal">Animal</a>
+        </nav>
+    </header>
     <h1>voici la liste</h1>
     <div th:each="animal : ${animal}" id="liste">
         <div id="conteneur">
