--- a/src/main/resources/templates/person/personVueCreate.html
+++ b/src/main/resources/templates/person/personVueCreate.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <h1>Créer une personne</h1>
+    <h1 th:if="${id == null}">Créer une Personne</h1>
+    <h1 th:if="${id != null}">Modifier une Personne</h1>
     <form th:object="${person}" th:action="@{/person}" method="post">
         <input type="hidden" th:field="*{id}" />
         <div>
