ok tout est bon bug corriger et mis en place des 2 bouton supplementaire sur personne

--- a/src/main/resources/templates/animal/animalVueCreate.html
+++ b/src/main/resources/templates/animal/animalVueCreate.html
@@ -31,7 +31,7 @@
         </div>
         <div>
             <label for="sex">Sex :</label>
-            <input type="text" th:field="*{sex}" id="sex" />
+            <input type="text" th:field="*{sex}" id="sex" placeholder="M ou F" />
         </div>
         <div>
             <input type="submit" class="button" value="Sauver" onclick="window.location='/animal'" />
