--- a/src/main/resources/templates/person/personVueCreate.html
+++ b/src/main/resources/templates/person/personVueCreate.html
@@ -29,7 +29,7 @@
         </div>
         <div>
             <label for="animalsSelect">Choisissez un animal :</label>
-            <select id="animalsSelect" name="animal" multiple>
+            <select id="animalsSelect" th:field="*{animals}" multiple>
                 <option th:each="animals : ${animalsList}" th:value="${animals.id}" th:text="${animals.name}"></option>
             </select>
         </div>
